@@ -66,7 +66,8 @@ winwidget_allocate(void)
    D_RETURN(ret);
 }
 
-winwidget winwidget_create_from_image(Imlib_Image im, char *name, char type)
+winwidget
+winwidget_create_from_image(Imlib_Image im, char *name, char type)
 {
    winwidget ret = NULL;
 
@@ -93,7 +94,8 @@ winwidget winwidget_create_from_image(Imlib_Image im, char *name, char type)
    D_RETURN(ret);
 }
 
-winwidget winwidget_create_from_file(feh_file * file, char *name, char type)
+winwidget
+winwidget_create_from_file(feh_file * file, char *name, char type)
 {
    winwidget ret = NULL;
 
@@ -288,10 +290,6 @@ winwidget_setup_pixmaps(winwidget winwid)
 void
 winwidget_render_image(winwidget winwid, int resize, int alias)
 {
-   int x = 0, y = 0;
-   int www, hhh;
-   int need_resize = 0;
-
    D_ENTER;
 
    if (!opt.full_screen && resize)
@@ -307,79 +305,83 @@ winwidget_render_image(winwidget winwid, int resize, int alias)
            || (winwid->im_x || winwid->im_y)))
       feh_draw_checks(winwid);
 
-   if (opt.full_screen)
+   if (resize && opt.full_screen)
    {
       int smaller;              /* Is the image smaller than screen? */
 
       D(("Calculating for fullscreen render\n"));
       smaller = ((winwid->im_w < scr->width) && (winwid->im_h < scr->height));
 
-      if (opt.auto_zoom && !(smaller && !opt.stretch))
+      if (!smaller || opt.auto_zoom)
       {
-         www = scr->width;
-         hhh = scr->height;
+         double ratio = 0.0;
 
-         /* FIXME Very similar aspect code exists in montage.c */
-
-         if (opt.aspect)
+         /* Image is larger than the screen (so want's shrinking), or it's
+            smaller but wants expanding to fill it */
+         ratio =
+            feh_calc_needed_zoom(&(winwid->zoom_percent), winwid->im_w,
+                                 winwid->im_h, scr->width, scr->height);
+         if (ratio > 1.0)
          {
-            double ratio = 0.0;
-
-            ratio =
-               ((double) winwid->im_w / winwid->im_h) / ((double) www / hhh);
-
-            if (ratio > 1.0)
-            {
-               hhh /= ratio;
-               y = (scr->height - hhh) >> 1;
-            }
-            else if (ratio != 1.0)
-            {
-               www *= ratio;
-               x = (scr->width - www) >> 1;
-            }
+            /* height is the factor */
+            winwid->im_x = 0;
+            winwid->im_y =
+               ((int)
+                (scr->height -
+                 (winwid->im_h * PERCENT(winwid->zoom_percent)))) >> 1;
          }
-         feh_imlib_render_image_on_drawable_at_size(winwid->bg_pmap,
-                                                    winwid->im, x, y, www,
-                                                    hhh, 1,
-                                                    feh_imlib_image_has_alpha
-                                                    (winwid->im), alias);
+         else
+         {
+            /* width is the factor */
+            winwid->im_x =
+               ((int)
+                (scr->width -
+                 (winwid->im_w * PERCENT(winwid->zoom_percent)))) >> 1;
+            winwid->im_y = 0;
+         }
       }
       else
       {
-         x = (scr->width - winwid->im_w) >> 1;
-         y = (scr->height - winwid->im_h) >> 1;
-         feh_imlib_render_image_on_drawable(winwid->bg_pmap, winwid->im, x, y,
-                                            1,
-                                            feh_imlib_image_has_alpha
-                                            (winwid->im), alias);
+         /* Just center the image in the fullscreen window */
+         winwid->zoom_percent = 100;
+         winwid->im_x = (scr->width - winwid->im_w) >> 1;
+         winwid->im_y = (scr->height - winwid->im_h) >> 1;
       }
    }
-   else
-   {
-      /* resize window if the image size has changed */
-      D(("rendering image normally\n"));
-      feh_imlib_render_image_on_drawable_at_size(winwid->bg_pmap, winwid->im,
-                                                 winwid->im_x, winwid->im_y,
-                                                 winwid->im_w *
-                                                 PERCENT(winwid->
-                                                         zoom_percent),
-                                                 winwid->im_h *
-                                                 PERCENT(winwid->
-                                                         zoom_percent), 1,
-                                                 feh_imlib_image_has_alpha
-                                                 (winwid->im), alias);
-   }
-   if (need_resize)
-      winwidget_resize(winwid, winwid->im_w, winwid->im_h);
+   feh_imlib_render_image_on_drawable_at_size(winwid->bg_pmap, winwid->im,
+                                              winwid->im_x, winwid->im_y,
+                                              winwid->im_w *
+                                              PERCENT(winwid->zoom_percent),
+                                              winwid->im_h *
+                                              PERCENT(winwid->zoom_percent),
+                                              1,
+                                              feh_imlib_image_has_alpha
+                                              (winwid->im), alias);
 
    XSetWindowBackgroundPixmap(disp, winwid->win, winwid->bg_pmap);
    XClearWindow(disp, winwid->win);
    D_RETURN_;
 }
 
-Pixmap
-feh_create_checks(void)
+double
+feh_calc_needed_zoom(int *zoom, int orig_w, int orig_h, int dest_w,
+                     int dest_h)
+{
+   double ratio = 0.0;
+
+   D_ENTER;
+
+   ratio = ((double) orig_w / orig_h) / ((double) dest_w / dest_h);
+
+   if (ratio > 1.0)
+      *zoom = ((double) dest_w / orig_w) * 100;
+   else if (ratio != 1.0)
+      *zoom = ((double) dest_h / orig_h) * 100;
+
+   D_RETURN(ratio);
+}
+
+Pixmap feh_create_checks(void)
 {
    static Pixmap checks_pmap = None;
    Imlib_Image checks = NULL;
@@ -565,7 +567,8 @@ winwidget_unregister(winwidget win)
    D_RETURN_;
 }
 
-winwidget winwidget_get_from_window(Window win)
+winwidget
+winwidget_get_from_window(Window win)
 {
    winwidget ret = NULL;
 
@@ -578,18 +581,22 @@ winwidget winwidget_get_from_window(Window win)
 void
 winwidget_rename(winwidget winwid, char *newname)
 {
+   D_ENTER;
    if (winwid->name)
       free(winwid->name);
    winwid->name = newname;
    winwidget_update_title(winwid);
+   D_RETURN_;
 }
 
 void
 winwidget_free_image(winwidget w)
 {
+   D_ENTER;
    if (w->im)
       feh_imlib_free_image_and_decache(w->im);
    w->im = NULL;
    w->im_w = 0;
    w->im_h = 0;
+   D_RETURN_;
 }
